RESOLVED FIXED116901
ASSERTION FAILED: !m_visibleDescendantStatusDirty on twitter
https://bugs.webkit.org/show_bug.cgi?id=116901
Summary ASSERTION FAILED: !m_visibleDescendantStatusDirty on twitter
Simon Fraser (smfr)
Reported 2013-05-28 17:06:34 PDT
On Twitter in debug builds it's fairly common to hit: ASSERTION FAILED: !m_visibleDescendantStatusDirty /Volumes/SSData/Development/OSX/webkit/OpenSource/Source/WebCore/rendering/RenderLayer.cpp(6038) : bool WebCore::RenderLayer::isVisuallyNonEmpty() const 1 0x102b37960 WTFCrash 2 0x104ace598 WebCore::RenderLayer::isVisuallyNonEmpty() const 3 0x104af956b WebCore::RenderLayerCompositor::requiresCompositingForPosition(WebCore::RenderObject*, WebCore::RenderLayer const*, WebCore::RenderLayer::ViewportConstrainedNotCompositedReason*) const 4 0x104af36dd WebCore::RenderLayerCompositor::requiresCompositingLayer(WebCore::RenderLayer const*, WebCore::RenderLayer::ViewportConstrainedNotCompositedReason*) const 5 0x104af3fba WebCore::RenderLayerCompositor::needsToBeComposited(WebCore::RenderLayer const*, WebCore::RenderLayer::ViewportConstrainedNotCompositedReason*) const 6 0x104af204e WebCore::RenderLayerCompositor::computeCompositingRequirements(WebCore::RenderLayer*, WebCore::RenderLayer*, WebCore::RenderLayerCompositor::OverlapMap*, WebCore::CompositingState&, bool&, bool&) 7 0x104af2377 WebCore::RenderLayerCompositor::computeCompositingRequirements(WebCore::RenderLayer*, WebCore::RenderLayer*, WebCore::RenderLayerCompositor::OverlapMap*, WebCore::CompositingState&, bool&, bool&) 8 0x104af2377 WebCore::RenderLayerCompositor::computeCompositingRequirements(WebCore::RenderLayer*, WebCore::RenderLayer*, WebCore::RenderLayerCompositor::OverlapMap*, WebCore::CompositingState&, bool&, bool&) 9 0x104af1941 WebCore::RenderLayerCompositor::updateCompositingLayers(WebCore::CompositingUpdateType, WebCore::RenderLayer*) 10 0x103dfcd8d WebCore::FrameView::updateCompositingLayersAfterLayout() 11 0x103dfee65 WebCore::FrameView::layout(bool) 12 0x103b548de WebCore::Document::updateLayout() 13 0x103b57c95 WebCore::Document::updateLayoutIgnorePendingStylesheets() 14 0x103cb5c07 WebCore::Element::offsetParent() 15 0x103cb5b55 WebCore::Element::bindingsOffsetParent() 16 0x104338e4f WebCore::jsElementOffsetParent(JSC::ExecState*, JSC::JSValue, JSC::PropertyName) 17 0x1026a1809 JSC::PropertySlot::getValue(JSC::ExecState*, JSC::PropertyName) const
Attachments
Patch (2.22 KB, patch)
2013-08-21 14:27 PDT, Simon Fraser (smfr)
bdakin: review+
Simon Fraser (smfr)
Comment 1 2013-05-28 17:08:20 PDT
Also reported for: 1. http://www.squarespace.com 2. Click Login (top right). 3. Type in the password field.
Simon Fraser (smfr)
Comment 2 2013-05-28 17:09:19 PDT
Simon Fraser (smfr)
Comment 3 2013-08-21 14:27:15 PDT
Simon Fraser (smfr)
Comment 4 2013-08-21 14:31:52 PDT
Note You need to log in before you can comment on or make changes to this bug.